--- a/project-Noticias/indice.html
+++ b/project-Noticias/indice.html
@@ -39,14 +39,18 @@
     -->
     <table style="width: 100%;">
         <tr>
-            <th><a href="#seccion1">Noticia Google</a></th>
+            <th><a href="noticia1.html">Noticia Google</a></th>
         </tr>
         <tr>
-            <th><a href="#seccion2">Noticia Cientifica</a></th>
+            <th><a href="noticia2.html">Noticia Cientifica</a></th>
         </tr>
         <tr>
-            <th><a href="#seccion3">Noticia Quijote</a></th>
+            <th><a href="noticia3.html">Noticia Quijote</a></th>
         </tr>
+        <tr>
+            <th><a href="noticia4.html">Noticia 4</a></th>
+        </tr>
+
     </table>
 
     
