--- a/project-Noticias/noticia4.html
+++ b/project-Noticias/noticia4.html
@@ -13,11 +13,17 @@
     </style>
 </head>
 <body>
+    <div class="botonera">
+    <a href="indice.html"> 
+        <img class="imgBotonera" src="https://static.vecteezy.com/system/resources/previews/009/350/972/non_2x/arrow-icon-arrows-sign-black-arrows-free-png.png" alt="Back to home" style="width:42px;height:42px">
+    </a>
+    </div>
+    <br><br>
     <h1>Libros Recomendados</h1>
     <table style="width:100%">
         <tr>
             <th style="width: 30%;">Autores</th>
-            <th style="width: 60%;">Títulos de libros</th>
+            <th style="width: 60%; height: 100px;">Títulos de libros</th>
             <th style="width: 10%;">Precio</th>
         </tr>
         <tr>
