--- a/project-Noticias/noticia4.html
+++ b/project-Noticias/noticia4.html
@@ -22,36 +22,43 @@
     <h1>Libros Recomendados</h1>
     <table style="width:100%">
         <tr>
+            <th style="width: 5%";></th>
             <th style="width: 30%;">Autores</th>
             <th style="width: 60%; height: 100px;">Títulos de libros</th>
             <th style="width: 10%;">Precio</th>
         </tr>
         <tr>
+            <th style="width: 5%";>1</th>
             <td style="width: 30%;">Gabriel García Márquez</td>
             <td style="width: 60%;">Cien años de soledad</td>
             <td style="width: 10%;">20€</td>
         </tr>
         <tr>
+            <th style="width: 5%";>2</th>
             <td style="width: 30%;">Jane Austen</td>
             <td style="width: 60%;">Orgullo y prejuicio</td>
             <td style="width: 10%;">15€</td>
         </tr>
         <tr>
+            <th style="width: 5%";>3</th>
             <td style="width: 30%;">Haruki Murakami</th>
             <td style="width: 60%;">Norwegian Wood</th>
             <td style="width: 10%;">18€</th>
         </tr>
         <tr>
+            <th style="width: 5%";>4</th>
             <td style="width: 30%;">J.K. Rowling</td>
             <td style="width: 60%;">Harry Potter y la piedra filosofal</td>
             <td style="width: 10%;">25€</td>
         </tr>
         <tr>
+            <th style="width: 5%";>5</th>
             <td style="width: 30%;">Agatha Christie</td>
             <td style="width: 60%;">Asesinato en el Orient Express</td>
             <td style="width: 10%;">22</td>
         </tr>
         <tr>
+            <th style="width: 5%";>6</th>
             <td style="width: 30%;">Ernest Hemingway</td>
             <td style="width: 60%;">El viejo y el mar</td>
             <td style="width: 10%;">16€</td>
