--- a/project-Noticias/noticia4.html
+++ b/project-Noticias/noticia4.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <div class="botonera">
-        <a href="indice.html"> 
-            <img class="imgBotonera"src="https://static.vecteezy.com/system/resources/previews/009/350/972/non_2x/arrow-icon-arrows-sign-black-arrows-free-png.png" alt="Back to home" style="width:42px;height:42px">
+        <a class="botonera-link" href="indice.html"> 
+            <img class="imgBotonera" src="https://static.vecteezy.com/system/resources/previews/009/350/972/non_2x/arrow-icon-arrows-sign-black-arrows-free-png.png" alt="Back to home" style="width:42px;height:42px">
         </a>
-        <img src="img/quijote.jpg" alt="workplace" usemap="#map" style="width:350px;height:130px; margin: 0 auto">
+        <img src= "img/quijote.jpg" alt="workplace" usemap="#map" style="width:350px;height:130px; margin: 0 auto">
             <map name="map">
                 <area shape="circle" coords="70,65,30" alt="Sección1" href="noticia1.html">
                 <area shape="circle" coords="175,65,30" alt="Sección2" href="noticia2.html">
