--- a/project-Noticias/noticia4.html
+++ b/project-Noticias/noticia4.html
@@ -31,47 +31,64 @@
     <table class="tabla-contenedor" style="width:100%">
         <caption style="font-size: 32px;">Obras Literarias</caption>
         <tr>
-            <th style="width: 30%"> Identificador </th>
-            <th colspan="5"; style="width: 30%">Obra</th>
+            <th style="width: 10%"> Identificador </th>
+            <th style="width: 20%">Autor</th>
+            <th style="width: 40%">Obra</th>
+            <th style="width: 20%">Precio</th>
         </tr>
         <tr>
             <td>1</td>
-                <td>Gabriel García Márquez</div>
-                <td>Cien años de soledad</td>
-                <td>20€</td>
-            </td>
+            <td rowspan="2">Gabriel García Márquez</td>
+            <td>Cien años de soledad</td>
+            <td>20€</td>
         </tr>
         <tr>
             <td>2</td>
+            <td>Otra obra de García Márquez</td>
+            <td>Otro precio</td>
+        </tr>
+        <tr>
+            <td>3</td>
             <td>Jane Austen</td>
             <td>Orgullo y prejuicio</td>
             <td>15€</td>
         </tr>
         <tr>
-            <td>3</td>
+            <td>4</td>
             <td>Haruki Murakami</td>
             <td>Norwegian Wood</td>
             <td>18€</td>
         </tr>
         <tr>
-            <td>4</td>
-            <td>J.K. Rowling</td>
-            <td>Harry Potter y la piedra filosofal</td>
-            <td>25€</div>
-        </tr>
-        <tr>
             <td>5</td>
-            <td>Agatha Christie</td>
-            <td>Asesinato en el Orient Express</div>   
-            <td>22€</td>
+            <td rowspan="2">J.K. Rowling</td>
+            <td>Harry Potter y la piedra filosofal</td>
+            <td>25€</td>
         </tr>
         <tr>
             <td>6</td>
+            <td>Otra obra de J.K. Rowling</td>
+            <td>Otro precio</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td rowspan="2">Agatha Christie</td>
+            <td>Asesinato en el Orient Express</td>   
+            <td>22€</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Otra obra de Agatha Christie</td>
+            <td>Otro precio</td>
+        </tr>
+        <tr>
+            <td>9</td>
             <td>Ernest Hemingway</td>  
             <td>El viejo y el mar</td>
             <td>16€</td>
         </tr>
     </table>
+    
 
 
 
