--- a/project-TeleTaxi/SNosotros.html
+++ b/project-TeleTaxi/SNosotros.html
@@ -21,6 +21,8 @@
 				<li><a href="./pedidos.html">Pide ya</a></li>
 
 				<li><a href="./equipo.html">Equipo</a></li>
+
+                <li><a href="./administracion.html">Administración</a></li>
                 
 			</ul>
 		</nav>
