--- a/project-Noticias/noticia3.html
+++ b/project-Noticias/noticia3.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticia 1</title>
-    <link rel="stylesheet" href="styles
-    .css">
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
     <!--Botonera-->
     <div class="botonera">
         <a href="indice.html"> 
-            <img class="imgBotonera"src="https://static.vecteezy.com/system/resources/previews/009/350/972/non_2x/arrow-icon-arrows-sign-black-arrows-free-png.png" alt="Back to home" style="width:42px;height:42px">
+            <img class="imgBotonera" src="https://static.vecteezy.com/system/resources/previews/009/350/972/non_2x/arrow-icon-arrows-sign-black-arrows-free-png.png" alt="Back to home" style="width:42px;height:42px">
         </a>
         <img src="img/quijote.jpg" alt="workplace" usemap="#map" style="width:350px;height:130px; margin: 0 auto">
             <map name="map">
@@ -24,8 +23,18 @@
         
      <!-- Don quijote -->
     <h1>Don Quijote</h1>
-    
-    <p  style="color: hsl(0, 76%, 85%); font-family:italic">En resolución, él se enfrascó tanto en su luctura, que se le pasaban las noches leyendo de claro en claro, y los días de turbio en turbio, y así, del poco dormir y del mucho leer, se le secó el cerebro, y llenósele de telarañas la cabeza. </p>
-   
+
+    <div class="noticia-container">
+        <div class="clearfix">
+            <div class="español">
+                <h2>Noticia en español</h2>
+                <p style="color: hsl(0, 0%, 0%); font-family:Arial, Helvetica, sans-serif;">En resolución, él se enfrascó tanto en su lectura, que se le pasaban las noches leyendo de claro en claro, y los días de turbio en turbio, y así, del poco dormir y del mucho leer, se le secó el cerebro, y llenósele de telarañas la cabeza.</p>
+            </div>
+            <div class="ingles">
+                <h2>Noticia en inglés</h2>
+                <p style="color: hsl(0, 0%, 0%); font-family:Arial, Helvetica, sans-serif;">In conclusion, he became so engrossed in his reading that he spent nights reading from clear to clear, and days from murky to murky, and so, from little sleep and much reading, his brain dried up, and cobwebs filled his head.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
